--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "@angular/http": "4.1.3",
         "@angular/platform-browser": "4.1.3",
         "@angular/platform-browser-dynamic": "4.1.3",
+        "@ionic-native/background-geolocation": "^4.2.1",
         "@ionic-native/core": "3.12.1",
         "@ionic-native/geolocation": "^4.2.1",
         "@ionic-native/splash-screen": "3.12.1",
@@ -27,6 +28,7 @@
         "@ionic/storage": "2.0.1",
         "cordova-android": "^6.2.3",
         "cordova-plugin-geolocation": "^2.4.3",
+        "cordova-plugin-mauron85-background-geolocation": "^2.2.5",
         "ionic-angular": "3.6.1",
         "ionicons": "3.0.0",
         "rxjs": "5.4.0",
@@ -40,7 +42,8 @@
     "description": "An Ionic project",
     "cordova": {
         "plugins": {
-            "cordova-plugin-geolocation": {}
+            "cordova-plugin-geolocation": {},
+            "cordova-plugin-mauron85-background-geolocation": {}
         }
     }
 }
