--- a/package.json
+++ b/package.json
@@ -26,10 +26,15 @@
         "@ionic-native/splash-screen": "3.12.1",
         "@ionic-native/status-bar": "3.12.1",
         "@ionic/storage": "2.0.1",
-        "cordova-android": "^6.2.3",
+        "cordova-plugin-compat": "^1.0.0",
+        "cordova-plugin-device": "^1.1.4",
         "cordova-plugin-geolocation": "^2.4.3",
         "cordova-plugin-mauron85-background-geolocation": "^2.2.5",
+        "cordova-plugin-splashscreen": "^4.0.3",
+        "cordova-plugin-statusbar": "^2.2.2",
+        "cordova-plugin-whitelist": "^1.3.1",
         "ionic-angular": "3.6.1",
+        "ionic-plugin-keyboard": "^2.2.1",
         "ionicons": "3.0.0",
         "rxjs": "5.4.0",
         "sw-toolbox": "3.6.0",
@@ -43,7 +48,13 @@
     "cordova": {
         "plugins": {
             "cordova-plugin-geolocation": {},
-            "cordova-plugin-mauron85-background-geolocation": {}
-        }
+            "cordova-plugin-mauron85-background-geolocation": {},
+            "cordova-plugin-device": {},
+            "cordova-plugin-splashscreen": {},
+            "cordova-plugin-statusbar": {},
+            "cordova-plugin-whitelist": {},
+            "ionic-plugin-keyboard": {}
+        },
+        "platforms": []
     }
 }
