--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "@ionic-native/splash-screen": "3.12.1",
         "@ionic-native/status-bar": "3.12.1",
         "@ionic/storage": "2.0.1",
+        "cordova-android": "^6.2.3",
         "cordova-plugin-compat": "^1.0.0",
         "cordova-plugin-device": "^1.1.4",
         "cordova-plugin-geolocation": "^2.4.3",
@@ -55,6 +56,8 @@
             "cordova-plugin-whitelist": {},
             "ionic-plugin-keyboard": {}
         },
-        "platforms": []
+        "platforms": [
+            "android"
+        ]
     }
 }
